# spec-driven-workflow-mcp

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WARP.md  __version__.py  hello.py  pyproject.toml  server.py
.claude/commands/: test-prompt.md
.gemini/commands/: test-prompt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/check-org-membership/: action.yml
.github/chainguard/: main-semantic-release.sts.yaml
.github/workflows/: ci.yml  claude.yml  opencode-gpt-5-codex.yml  pr-title-lint.yml  release.yml
docs/: 001-SYSTEM.md  PROGRESS.md  PR_DESCRIPTION.md  faq.md  mcp-prompt-support.md  operations.md  press-release.md  slash-command-generator.md
docs/research/codebase-context/: README.md  claude-code-feature-dev-comparison.md  code-analyst.md  context_bootstrap.md  information-analyst.md  research-synthesis.md
docs/research/reverse-engineer-prompts/: README.md  code-analyst.md
docs/roadmap/: PROGRESS.md
mcp_server/: __init__.py  config.py  prompt_utils.py  prompts_loader.py
prompts/: boulder-dash.md  generate-codebase-context.md  generate-context.md  generate-spec.md  generate-task-list-from-spec.md  manage-tasks.md  reverse-engineer-codebase.md
reverse_engineering_christian/.claude/: DUPLICATE-PREVENTION.md  INDEX.md  README.md  SETUP-GUIDE.md
reverse_engineering_christian/.claude/agents/: code-reusability-agent.md  debugger-agent.md  developer-agent.md  enterprise-codebase-documenter-agent.md  infrastructure-architect-agent.md  microservices-architect-agent.md
reverse_engineering_christian/.claude/commands/: architecture.md  find-library-usage.md  jira-to-prd.md  setup.md
reverse_engineering_christian/.claude/templates/: WORKING-NOTES.md
slash_commands/: __init__.py  cli.py  config.py  detection.py  generators.py  writer.py
tasks/: 0001-spec-sdd-mcp-poc.md  0002-spec-open-source-ready.md  0003-spec-slash-command-generator.md  0004-spec-review-fixes.md  0005-spec-fix-bundled-prompts-path.md  tasks-0001-spec-sdd-mcp-poc.md  tasks-0002-spec-open-source-ready.md  tasks-0003-spec-slash-command-generator.md  tasks-0004-spec-review-fixes.md  tasks-0005-spec-fix-bundled-prompts-path.md
tests/: conftest.py  test_cli.py  test_config.py  test_detection.py  test_generators.py  test_placeholder.py  test_prompts.py  test_validation.py  test_writer.py
vhs_demos/: run_generator_demo.sh  slash-command-generator-demo.tape
