[project]
name = "spec-driven-development-mcp"
version = "0.1.0"
description = "A framework for spec driven development (SDD) that can be used anywhere an AI agent is used as a collaborator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.4.1",
]
